Changelog
=========

2.0.9 (unreleased)
------------------

- Nothing changed yet.


2.0.8 (2012-05-25)
------------------

- Be less sensitive for white space differences in tests.
  [maurits]


2.0.7 (2011-11-24)
------------------

- getExpirationTimeout() now returns the correct number of hours, and not a value 24*24 times too low.
  (The code was never used though, since _timedelta does currently not store a timedelta but an int.)
  [kleist]


2.0.6 - 2011-06-02
------------------

- Apply patch to prevent exploitation of CVE-2011-1948 (Hotfix 20110531.)
  [elro]

- Fix edge case where member.fullname returns None instead of a string (ZMI 
  or emergency user resets)
  [eleddy]

2.0.5 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- URL for login form is now '/login' instead of 'login_form', adjust tests
  accordingly.
  [esteele]
  
2.0.4 - 2010-11-23
------------------

- Fallback import to work with Plone 3.
  [elro]

2.0.3 - 2010-09-20
------------------

- Fix the fix to http://dev.plone.org/plone/ticket/11136.
  [davisagli]

- Fix string exceptions in pwreset_action.cpy
  [davisagli]

2.0.2 - 2010-09-17
------------------

- Fix userid/login mixup which made it impossible to reset the password
  in environments where userid and login name are not equal. This fixes
  `Plone ticket 1136 <http://dev.plone.org/plone/ticket/11136>`_.
  [wichert]

2.0.1 - 2010-07-31
------------------

- Added line feed after the reset_url in mail_password_template.
  It was impossible to reset the password by clicking the url because
  there was "(This" at the end.
  [vincentfretin]

2.0 - 2010-07-18
----------------

- Updated markup of password reset form. This closes
  http://dev.plone.org/plone/ticket/10768.
  [hannosch]

2.0b7 - 2010-03-03
------------------

- Avoid test failures caused by access to hardcoded temp directories.
  [hannosch]

2.0b6 - 2010-02-18
------------------
